v0.14.0/_sources/projections/conic/polyconic.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/conic/polyconic.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_projections_conic_polyconic.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_conic_polyconic.py:


Polyconic projection
====================

The polyconic projection, in Europe usually referred to as the American
polyconic projection, was introduced shortly before 1820 by the Swiss-American
cartographer Ferdinand Rodulph Hassler (1770-1843). As head of the Survey of
the Coast, he was looking for a projection that would give the least distortion
for mapping the coast of the United States. The projection acquired its name
from the construction of each parallel, which is achieved by projecting the
parallel onto the cone while it is rolled around the globe, along the central
meridian, tangent to that parallel. As a consequence, the projection involves
many cones rather than a single one used in regular conic projections.

The polyconic projection is neither equal-area, nor conformal. It is true to
scale without distortion along the central meridian. Each parallel is true to
scale as well, but the meridians are not as they get further away from the
central meridian. As a consequence, no parallel is standard because conformity
is lost with the lengthening of the meridians.

**poly**/\ [*lon0*/\ [*lat0*/]]\ *scale* or
**Poly**/\ [*lon0*/\ [*lat0*/]]\ *width*

The projection is set with **poly** or **Poly**. The figure size is set
with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 29-40



.. image-sg:: /projections/conic/images/sphx_glr_polyconic_001.png
   :alt: polyconic
   :srcset: /projections/conic/images/sphx_glr_polyconic_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    import pygmt

    fig = pygmt.Figure()
    fig.coast(
        region=[-180, -20, 0, 90],
        projection="Poly/12c",
        frame="afg",
        land="seagreen",
        water="gray90",
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.168 seconds)


.. _sphx_glr_download_projections_conic_polyconic.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: polyconic.ipynb <polyconic.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: polyconic.py <polyconic.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: polyconic.zip <polyconic.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
